# BlogMovies

./: Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
blog_movies/: asgi.py  settings.py  urls.py  views.py  wsgi.py
blog_movies/templates/auth/: signup.html
media/images/: 801222_LhRcxcj.jfif  801445.jfif
posts_app/: admin.py  forms.py  models.py  urls.py  views.py
posts_app/migrations/: 0001_initial.py  0002_posts_opinions.py  0003_category_posts_category.py
posts_app/templates/: _navbar.html  base.html  post-delete.html  post-detail.html  post-form.html  post-list.html
