[tool.poetry]
name = "blogmovies"
version = "0.1.0"
description = "Blog Movies"
authors = ["Jessie"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
django = "^5.0.4"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
